@@ -67,6 +67,7 @@ unsigned long mutex_set_key[SET_MUTEX_NUM] = {
   0x22005408,
   0x22005409,
   0x2200540a,
+  0x2200540b,
 };
 
 time_t          server_time;
